--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductProfil_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductProfil_Doppelzylinder.cshtml
@@ -18,31 +18,63 @@
                 <h2><strong id="cost" style="line-height: 200%;">@Model.Cost</strong></h2>
                 <h6 style="line-height: 200%; max-width: 400px;">@Model.description</h6>
             </div>
-           
-            <div id="cardOptions">
-                <h6>
-                    Zylinderlänge A (Außenlänge)
-                    Bitte wählen Sie zunächst die Außenlänge des Zylinders
-                </h6>
-                <select id="aussen" class="form-select" onchange="selectParamAussen(event.target.value)">
-                    @foreach (var listItem in ViewBag.aussen)
-                    {
-                        <option id="OptionA">@listItem</option>
-                    }
-                </select>
-   
-                <h6>
-                    Zylinderlänge B (Innenlänge)
-                    Bitte wählen Sie jetzt die Innenlänge des Zylinders
-                </h6>
+            @if (Model.isGround==true)
+            {
+                <div id="cardOptions">
+                    <h6>
+                        Zylinderlänge A (Außenlänge)
+                        Bitte wählen Sie zunächst die Außenlänge des Zylinders
+                    </h6>
 
-                <select id="Innen" class="form-select"  onchange="selectParamIntern(event.target.value)">
-                    @foreach (var listItem in ViewBag.innen)
-                    {
-                        <option id="OptionI">@listItem</option>
-                    }
-                </select>
-            </div>
+                    <select id="aussen" class="form-select" onchange="selectParamAussen(event.target.value)">
+                        @foreach (var listItem in ViewBag.aussen)
+                        {
+                            <option id="OptionA">@listItem</option>
+                        }
+                    </select>
+
+                    <h6>
+                        Zylinderlänge B (Innenlänge)
+                        Bitte wählen Sie jetzt die Innenlänge des Zylinders
+                    </h6>
+
+                    <select id="Innen" class="form-select" onchange="selectParamIntern(event.target.value)">
+                        @foreach (var listItem in ViewBag.innen)
+                        {
+                            <option id="OptionI">@listItem</option>
+                        }
+                    </select>
+                </div>
+                        }
+            else
+            {
+                <div id="cardOptions">
+                    <h6>
+                        Zylinderlänge A (Außenlänge)
+                        Bitte wählen Sie zunächst die Außenlänge des Zylinders
+                    </h6>
+
+                    <select id="aussen" class="form-select" onchange="selectParamAussenIsGround(event.target.value)">
+                        @foreach (var listItem in ViewBag.aussen)
+                        {
+                            <option id="OptionA">@listItem</option>
+                        }
+                    </select>
+
+                    <h6>
+                        Zylinderlänge B (Innenlänge)
+                        Bitte wählen Sie jetzt die Innenlänge des Zylinders
+                    </h6>
+
+                    <select id="Innen" class="form-select" onchange="selectParamInternIsGround(event.target.value)">
+                        @foreach (var listItem in ViewBag.innen)
+                        {
+                            <option id="OptionI">@listItem</option>
+                        }
+                    </select>
+                </div>
+            }
+           
 
             <div id="cardOptions">
                 @{
@@ -89,7 +121,134 @@
 
     let AussenCost = 0;
     let InternCost = 0;
+    let OptionCost = 0;
 
+    function selectParamAussenIsGround(value) 
+    {
+        let iterations = 0;
+        let serchedItem = 0;
+
+        let BlockTur = document.querySelector(`#cardOptions`);
+        let Aussen = BlockTur.querySelector("#aussen");
+        let Aitems = Aussen.querySelectorAll("#OptionA");
+
+        let Intern = BlockTur.querySelector("#Innen");
+        let Iitems = Intern.querySelectorAll("#OptionI");
+
+        Aitems.forEach(function (items) {
+            if (serchedItem == 1) {
+                return;
+            }
+            else {
+                let ItemValue = Number(items.innerHTML);
+                if (ItemValue > 31) {
+                    iterations++;
+
+                    if (ItemValue == value) {
+                        serchedItem++;
+                        return;
+                    }
+                }
+                else {
+                    if (ItemValue == value) {
+                        AussenCost = 0;
+                        let a = Number(localStorage.sInnen);
+                        let b = Number(localStorage.sAussen);
+                        let c = Number(localStorage.options);
+
+                        let sum = parseFloat(localStorage.getItem("cost").replace(',', '.')) + a + b + c;
+                        AllPrice.innerHTML = String(sum);
+                        console.log(cost.innerHTML);
+                        serchedItem++;
+                        return;
+                    }
+                }
+
+            }
+
+        });
+
+
+
+
+        AussenCost = 0;
+
+        for (let i = 0; i < iterations; i++) 
+        {
+            AussenCost = AussenCost + 5;
+        }
+
+
+        localStorage.sAussen = AussenCost;
+        let a = Number(localStorage.sInnen);
+        let b = Number(localStorage.sAussen);
+        let c = Number(localStorage.options);
+
+        let sum = parseFloat(localStorage.getItem("cost").replace(',', '.')) + a + b + c;
+        AllPrice.innerHTML = String(sum);
+
+        iterations = 0;
+        serchedItem = 0;
+
+    }
+    function selectParamInternIsGround(value) 
+    {
+        let Iiterations = 0;
+        let IserchedItem = 0;
+
+        let BlockTur = document.querySelector(`#cardOptions`);
+
+        let Intern = BlockTur.querySelector("#Innen");
+        let Iitems = Intern.querySelectorAll("#OptionI");
+
+        Iitems.forEach(function (items) {
+            if (IserchedItem == 1) {
+                return;
+            }
+            else {
+                let ItemValue = Number(items.innerHTML);
+
+                if (ItemValue > 31) {
+                    Iiterations++;
+
+                    if (ItemValue == value) {
+                        IserchedItem++;
+                        return;
+                    }
+                }
+                else {
+                    if (ItemValue == value) {
+                        InternCost = 0;
+                        let a = Number(localStorage.sInnen);
+                        let b = Number(localStorage.sAussen);
+                        let c = Number(localStorage.options);
+
+                        let sum = parseFloat(localStorage.getItem("cost").replace(',', '.')) + a + b + c;
+                        AllPrice.innerHTML = String(sum);
+                        console.log(cost.innerHTML);
+                        IserchedItem++;
+                        return;
+                    }
+                }
+
+            }
+
+        });
+        InternCost = 0;
+        for (let i = 0; i < Iiterations; i++) {
+            InternCost = InternCost + 5;
+        }
+        localStorage.sInnen = InternCost;
+
+        let a = Number(localStorage.sInnen);
+        let b = Number(localStorage.sAussen);
+        let c = Number(localStorage.options);
+
+        let sum = parseFloat(localStorage.getItem("cost").replace(',', '.')) + a + b + c;
+        AllPrice.innerHTML = String(sum);
+        Iiterations = 0;
+        IserchedItem = 0;
+    }
     function selectParamAussen(value) 
     {
         let iterations = 0;
@@ -236,19 +395,22 @@
         Iiterations = 0;
         IserchedItem = 0;
     }
-    function selectParamOptions(param,count)
+    function selectParamOptions(event, count) 
     {
-        let targetElement = event.target;
+        var selectedOptionId = event.target.options[event.target.selectedIndex].id;
+        OptionCost = OptionPrice[selectedOptionId];
+        localStorage.options = OptionCost;
+        let a = Number(localStorage.sInnen);
+        let b = Number(localStorage.sAussen);
+        let c = Number(localStorage.options);
 
-        let matchingChildren = targetElement.querySelectorAll(':scope > [value="Ja"]');
+        let sum = parseFloat(localStorage.getItem("cost").replace(',', '.')) + a + b + c;
+        AllPrice.innerHTML = String(sum);
 
-        console.log(matchingChildren);
-
-        console.log(event.target);
-
-        console.log(count);
+        OptionCost = 0;
+        console.log(OptionPrice[selectedOptionId]);
     }
-    // ${param.target.value}
+   
 </script>
 
 @section Scripts {
